overview: Fade in and out minimized windows in tablet mode.

Moved a common set of lines to overview_utils.cc and used the new
function to fade out minimzed windows in tablet mode.

Test: none
Bug: 824720, 839486
Change-Id: I4655a49d5f79db9d98786a7cef6fdbcc23ddfb9d
Reviewed-on: https://chromium-review.googlesource.com/984402
Commit-Queue: Sammie Quon <sammiequon@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#555958}
Former-commit-id: 855e372a61985e332a6def967957d6a3d2209ada